# modules_elf2efi

./: CMakeLists.txt
include/: Base.h  elf-local.h  util.h
src/: arch.inc.c  arch_32.c  arch_64.c  main.c  util.c
